keycloak-13-postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: themes
          persistentVolumeClaim:
            claimName: ashis-claim
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:13.0.1
        volumeMounts: 
          - mountPath: /opt/keycloak/themes
            name: themes
        ports:
        - name: http
          containerPort: 8080
